kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  replicas: 2 # 원하는 pod 수
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        - name: hello-world
          image: first6500/hello-world:latest  # 빌드한 Docker 이미지 이름
          ports:
            - containerPort: 9091 # 어플리케이션의 포트
#          env:
#            - name: JAVA_OPTS  # JAVA_OPTS 설정 (필요한 경우)
#              value: "-Xms512m -Xmx1024m"
