kube/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: yourdomain.com  # 도메인 이름 (테스트 시에는 hosts 파일 수정 가능)
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-app-service
                port:
                  number: 80
